--- a/INSTALL
+++ b/INSTALL
@@ -32,6 +32,13 @@ then execute `./autogen.sh'.
      recommended that the package be configured and built as a regular
      user, and only the `make install' phase executed with root
      privileges.
+     
+     Once installed point your web browser to the Aiki Site URL
+     (example: http://localhost/aiki). You can sign in using the
+     default user name 'admin'. Leave the password field blank and
+     press enter. You should set your password immediately. Click
+     on the 'admin' link in upper-right corner of the page next to
+     the '@' character and the 'Logout' link.
 
   3. You can also type `sudo make uninstall' to remove the installed
      files again. This package has tested that uninstallation works
