--- a/AUTHORS
+++ b/AUTHORS
@@ -11,5 +11,6 @@ Michi Krnac                     Developer
 Ronaldo Barbachano              Developer
 Vera Lobatcheva                 Graphic Design
 Brad Phillips                   Developer/Graphic Design
-Fabricatorz, LLC                Developers/Graphic Design
 Steven Garcia                   Developer/Programmer
+Fabricatorz, LLC                Developers/Graphic Design
+AikiLab Singapore, PTE LTD      Developers/Graphic Design
