--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
-Aiki Framework 0.4.5 Installation Instructions
-**********************************************
+Aiki Framework Installation Instructions
+****************************************
 
 Copyright (C) 1994, 1995, 1996, 1999, 2000, 2001, 2002, 2004, 2005,
 2006, 2007, 2008, 2009 Free Software Foundation, Inc.
@@ -277,8 +277,8 @@ operates.
 `configure' also accepts some other, not widely useful, options.  Run
 `configure --help' for more details.
 
-Aikiframework 0.4 php Source Revision Installation
-==================================================
+Aikiframework php Source Revision Installation
+==============================================
 
 1- extract the tar to your server document root
 
