--- a/README
+++ b/README
@@ -21,4 +21,21 @@ database engines (MYSQL, PSQL, SQLite, etc).
 We are also working on Python and Ruby on Rails versions, but they are
 still in pre-alpha stage. You will be able to convert any website
 built on the current PHP version to the Python or the Ruby alternative
-(once they are completed) in one click! 
+(once they are completed) in one click!
+
+-----
+
+Copyright (C) 2010 Aikilab
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU Affero General Public License as
+published by the Free Software Foundation, either version 3 of the
+License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU Affero General Public License for more details.
+
+You should have received a copy of the GNU Affero General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
