updated with fabricatorz who are helping

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,9 @@
 
 # Name                          Title 
 Bassel Safadi                   Lead Developer/Programmer
-Jon Phillips                    Project Manager
+Jon Phillips                    Project Manager/Developer
+Christopher Adams               Developer
+Barry Threw                     Developer
 Michi Krnac                     Developer
 Ronaldo Barbachano              Developer
 Vera Lobatcheva                 Graphic Design
