updated configs and stuff for htaccess

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-http://bazaar.launchpad.net/~aikiframework.admins/aikiframework/release-1.0.0/changes
+Commits and Messages are visible at the following URL:
+
+http://bazaar.launchpad.net/~aikiframework-devel/aikiframework/trunk/changes
 
 -----
 
