--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@ Vera Lobatcheva                 Graphic Design
 Brad Phillips                   Developer/Graphic Design
 Steven Garcia                   Developer/Programmer
 Roger Martín                    Developer/Programmer
+Jakub Jankiewicz                Developer/Programmer
 Fabricatorz, LLC                Developers/Graphic Design
 AikiLab Singapore, PTE LTD      Developers/Graphic Design
 
