added full link

--- a/README
+++ b/README
@@ -27,7 +27,8 @@ More Information
 ** http://launchpad.net/aikiframework
 
 * For free hosting of assets (extensions, plugins, etc)
-** http://aikiframework.org/wiki/Asset_Hosting
+** http://github.com/aikilab
+** http://aikiframework.org/wiki/Asset_Hosting (more information about)
 
 -----
 
