--- a/assets/apps/installer/languages/es.po
+++ b/assets/apps/installer/languages/es.po
@@ -7,286 +7,337 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-18 00:03+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2012-01-22 22:32+0100\n"
+"PO-Revision-Date: 2012-01-22 22:57+0100\n"
+"Last-Translator: Roger Martin <rg1024@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-
-#: ../installer.php:42
-msgid "install.css"
-msgstr ""
-
-#: text direction: ltr or rtl
-msgid "dir='ltr'"
-msgstr ""
-
-msgid "Aiki Installer"
-msgstr "Instalación de Aiki"
-
-msgid "Aiki Framework Installer"
-msgstr "Instalación del framework Aiki"
-
-
-msgid "<strong>Aiki Framework</strong> is an open source high-performance Web Application Framework for rapid web application development using Open Standards."
-msgstr "<p><strong>Aiki Framework</strong> es un framework de codigo abierto de alto rendimiento para rápido desarrollo de aplicaciones web usando Estandares Abiertos</p>"
-
-#: ../installer.php:42
-msgid "Select language for installation"
-msgstr "Selecciona lenguage"
-
-#: ../installer.php:45
-msgid "Change"
-msgstr "Cambiar"
-
-#: ../installer.php:81
-msgid "adminstrator"
-msgstr "adminstrador"
-
-#: ../installer.php:115
-#, php-format
+#: ../installer.php:118
 msgid "Installation aborted"
-msgstr "Instalación cancelara"
+msgstr "Instalación cancelada"
 
-#: ../installer.php:116
-msgid "Requirements"
-msgstr "Requisitos"
+#: ../installer.php:125
+#: ../installer.php:149
+#: ../installer.php:154
+#: ../installer.php:155
+msgid "Next:"
+msgstr "Siguiente:"
 
-msgid "Before we start you need the following"
-msgstr "Antes de empezar necesitarás"
-
-msgid "An empty database, with collation set to"
-msgstr "Una base de datos vacia, con cotejo (collation set)"
-
-msgid "PHP 5.2 or above and Apache2"
-msgstr "PHP 5.2 o superior y Apache2"
-
-msgid "mod_rewrite must be enabled inside apache2 httpd.conf"
-msgstr "mod_rewrite debe esta habilitado"
-
-#: ../installer.php:126
-msgid "Admin user / Site"
-msgstr "Usuario adminstrador / sitio"
-
-msgid "Host"
-msgstr "Servidor"
-
-msgid "Database"
-msgstr "Base de datos"
-
-msgid "Database name"
-msgstr "Nombre de la base de datos"
-
-msgid "Password"
-msgstr "Contraseña"
-
-msgid "Encoding"
-msgstr "Codificación"
-
-msgid "Test connection"
-msgstr "Probar conexión"
-
-msgid "Required Fields"
-msgstr "Campos obligatorios"
-
-msgid "Login"
-msgstr ""
-
-msgid "Full name"
-msgstr "Nombre completo"
-
-msgid "User"
-msgstr "Usuario"
-
-msgid "Aiki will send login and password using this email"
-msgstr "Aiki enviará los datos de login y contraseña a este email"
-
-#: ../installer.php:126
-msgid "Next"
-msgstr "Siguiente"
-
-
-#: ../installer.php:156
-msgid "Write configuration"
-msgstr "Escribir configuración"
-
-
+#: ../installer.php:125
 #: ../installer.php:163
-msgid "Pre-installation check"
-msgstr "Chequeo previo a la instalación"
-
-#: ../installer.php:164
-msgid "Requirements & language"
-msgstr "Requisitos y lenguaje"
-
-#: ../installer.php:126
-#: ../installer.php:165
 msgid "Settings"
 msgstr "Configuraciones"
 
-#: ../installer.php:166
+#: ../installer.php:128
+msgid "Database"
+msgstr "Base de datos"
+
+#: ../installer.php:130
+msgid "Host"
+msgstr "Servidor"
+
+#: ../installer.php:131
+msgid "Database name"
+msgstr "Nombre de la base de datos"
+
+#: ../installer.php:132
+msgid "User"
+msgstr "Usuario"
+
+#: ../installer.php:133
+#: ../library.php:395
+msgid "Password"
+msgstr "Contraseña"
+
+#: ../installer.php:134
+msgid "Encoding"
+msgstr "Codificación"
+
+#: ../installer.php:137
+msgid "Admin user / Site"
+msgstr "Administrador / Sitio"
+
+#: ../installer.php:138
+msgid "Login"
+msgstr "Login"
+
+#: ../installer.php:139
+msgid "Full name"
+msgstr "Nombre completo"
+
+#: ../installer.php:140
+msgid "Email"
+msgstr "Email"
+
+#: ../installer.php:141
+msgid "Aiki will send login and password using this email."
+msgstr "Aiki enviará el login y contraseña a este email"
+
+#: ../installer.php:145
+msgid "Required Fields"
+msgstr "Campos obligatorios"
+
+#: ../installer.php:148
+msgid "Test connection"
+msgstr "Probar conexión"
+
+#: ../installer.php:149
+#: ../installer.php:164
 msgid "Create database"
 msgstr "Crear base de datos"
 
-#: ../installer.php:167
+#: ../installer.php:154
+msgid "Write configuration"
+msgstr "Escribir configuración"
+
+#: ../installer.php:155
+#: ../installer.php:166
+msgid "Pretty urls"
+msgstr "Url elegantes (pretty)"
+
+#: ../installer.php:161
+msgid "Pre-installation check"
+msgstr "Cheque previo de la instalación"
+
+#: ../installer.php:162
+msgid "Requirements & language"
+msgstr "Requisitos y lenguaje"
+
+#: ../installer.php:165
 msgid "Config file"
 msgstr "Fichero de configuración"
 
-#: ../installer.php:168
-msgid "Pretty urls"
-msgstr "url elegantes (pretty)"
+#: ../installer.php:212
+msgid "Please, fill all required fields"
+msgstr "Por favor, rellena los campos obligatorios"
 
-#: ../installer.php:193
+#: ../installer.php:214
+#: ../library.php:322
 msgid "Error: no connection"
 msgstr "Error: no hay conexión"
 
-#: ../installer.php:195
-msgid "Error: no database selected"
-msgstr "Error: no hay seleccionada una base de datos"
-
-
-#: ../installer.php:204
-msgid "There is a existing configuration file"
-msgstr "Existe un fichero de configuración"
-
-msgid "Please remove file to continue installation"
-msgstr "Por favor, borre el fichero para continuar con la instalación"
-
-#: ../installer.php:250
-msgid "Go to"
-msgstr "Ir a"
-#: ../installer.php:254
-msgid "Have a nice day"
-msgstr "Que tenga un buen día"
-
-#: ../installer.php:261
-msgid "Your new Aiki installation"
-msgstr "Tu nueva instalación de Aiki"
-
-#: ../installer.php:320 ../installer.php:321
-msgid "step"
-msgstr "paso"
-
-#: ../installer.php:357
-msgid "Please, fill all required fields"
-msgstr "Por favor, rellena todos los campos obligatorios"
-
-#: ../installer.php:362
+#: ../installer.php:217
 msgid "Connection OK"
 msgstr "Conexión OK"
 
-#: ../installer.php:362
+#: ../installer.php:217
 msgid "no database name"
-msgstr "no hay base de datos"
+msgstr "falta nombre de la base de datos"
 
-#: ../installer.php:363
+#: ../installer.php:218
 msgid "Error: can't select database"
 msgstr "Error: no se puede seleccionar la base de datos"
 
-#: ../installer.php:366
+#: ../installer.php:221
 msgid "Connection and database OK"
-msgstr "Conexión y base de datos OK"
+msgstr "Conexión y base de datos Ok"
 
-#: ../installer.php:369
+#: ../installer.php:224
 msgid "created tables"
-msgstr "tablas creadas"
+msgstr "Tablas creadas"
 
-
-#: ../installer.php:383
+#: ../installer.php:241
 msgid "error"
 msgstr "error"
 
-msgid "Admin login"
-msgstr "Login de adminstración"
+#: ../installer.php:251
+msgid "Admin login:"
+msgstr "Login del administrador"
 
+#: ../installer.php:251
+msgid "Password:"
+msgstr "Contraseña"
 
-#: ../installer.php:394
+#: ../installer.php:252
 msgid "<strong>Please, annotate</strong> login and password. You will need them"
-msgstr "<strong>Por favor anote</strong> login y contraseña. Los necesitarás"
+msgstr "<strong>Por favor, anota</strong> login y contraseña. Te harán falta"
 
-#: ../installer.php:402
+#: ../installer.php:255
+#, php-format
+msgid "Data had send to %s"
+msgstr "Datos han sido enviados a %s"
+
+#: ../installer.php:260
 msgid "Some errors during creating tables <em>,perhaps tables already exists</em>"
-msgstr "Ocurrierón errores al crear las tablas <em>, quizás ya existián</em>"
+msgstr "Hubo errores durante la creación de tablas,<em> quizás ya existían</em>"
 
-
-
-#: ../installer.php:407
-msgid "Delete all tables for new installtion, or push next for upgrading"
-msgstr ""
-
-msgid "All tables was created correctly"
-msgstr "Todas las tabls fuerón creadas correctamente"
-
-#: ../installer.php:422
-msgid "FATAL ERROR: failed to read config template file"
-msgstr "ERROR FATAL: no se puede leer la plantilla de configuración"
-
-
-
-#: ../installer.php:439
-msgid "Config file created"
-msgstr "Fichero de configuración creado"
-
-#: ../installer.php:406
-#: ../installer.php:441
+#: ../installer.php:264
+#: ../installer.php:299
+#: ../installer.php:334
 msgid "Try again"
 msgstr "Intentar de nuevo"
 
-#: ../installer.php:444
-msgid "Please, copy this code, create file and paste"
-msgstr "Por favor, copia este código, crea el fichero, y pegalo"
+#: ../installer.php:265
+msgid "Delete all tables for new installtion, or push next for upgrading"
+msgstr "Borrar todas las tablas para una nueva instalación "
 
+#: ../installer.php:267
+msgid "All tables have created correctly"
+msgstr "Todas las tablas han sido creadas correctamente"
 
-#: ../installer.php:445 ../installer.php:480
+#: ../installer.php:280
+msgid "FATAL ERROR: failed to read config template file"
+msgstr "ERROR FATAL: no se puede abrir la plantilla para el fichero de configuración"
+
+#: ../installer.php:281
+#: ../installer.php:326
+#: ../installer.php:336
+msgid "Path"
+msgstr "Directorio"
+
+#: ../installer.php:297
+msgid "Config file created."
+msgstr "Fichero de configuración creado."
+
+#: ../installer.php:301
+msgid "can't write config file:"
+msgstr "No se puede escribir el fichero de configuración:"
+
+#: ../installer.php:301
+msgid "Path:"
+msgstr "Directorio:"
+
+#: ../installer.php:302
+#: ../installer.php:337
+msgid "Please, copy this code, create file and paste."
+msgstr "Por favor,  copia este código, crea el fichero y pégalo."
+
+#: ../installer.php:303
+#: ../installer.php:338
 msgid "Check permission in directory"
-msgstr "Comprueba permisos de directorio"
+msgstr "Comprueba permisos en el directorio"
 
-
-#: ../installer.php:455
-msgid "Installation finished <em>pretty urls are enabled with "
-"previous .htaccess</em>"
-msgstr ""
-
-#: ../installer.php:458
-msgid "Try/Check again"
-msgstr "Intenta/Comprueba de nuevo"
-
-#: ../installer.php:459
-msgid "There is a existing .htaccess file"
-msgstr "Existe un fichero .htaccess"
-
-#: ../installer.php:459
-msgid "Please, remove file or rewrite file with this code"
-msgstr "Por favor, borre el fichero o re-escribalo con este código"
-
-#: ../installer.php:467
-msgid "FATAL ERROR: failed to read htaccess.inc file"
-msgstr "ERROR FALTA: no se puede leer htaccess.inc"
-
-#: ../installer.php:473
-msgid "Installation finished <em>pretty urls are enabled</em>"
-msgstr "Instalación finalizado.<em>Url elegantes activas</em>"
-
+#: ../installer.php:313
 msgid "Installation finished <em>pretty urls are enabled with previous .htaccess</em>"
-msgstr "Instalación finalizada <em>url elegantes estan activas usando el .htaccess existente</em>"
+msgstr "Instalación finalizada <em>url elegantes activas usando un fichero .htaccess anterior</em>"
 
+#: ../installer.php:314
+#: ../installer.php:332
 msgid "Test my site!!"
 msgstr "¡¡Probar mi sitio!!"
 
-#: ../installer.php:491
+#: ../installer.php:316
+msgid "Try/Check again"
+msgstr "Intentar / comprobar de nuevo"
+
+#: ../installer.php:317
+msgid "There is a existing .htaccess file."
+msgstr "Existe un fichero .htaccess."
+
+#: ../installer.php:318
+msgid "Please, remove file or rewrite file with this code:"
+msgstr "Por favor, borre el fichero o sobre-escríbalo con este código:"
+
+#: ../installer.php:325
+msgid "FATAL ERROR: failed to read htaccess.inc file"
+msgstr "FATAL ERROR: fallo la lectura del fichero .htaccess.inc"
+
+#: ../installer.php:331
+msgid "Installation finished <em>pretty urls are enabled.</em>"
+msgstr "Instalación finalizada <em>con url elegantes activas.</em>"
+
+#: ../installer.php:336
+msgid "Aiki can't write .htaccess file:"
+msgstr "No se puede escribir el fichero .htaccess-"
+
+#: ../installer.php:350
+msgid "installer.css"
+msgstr ""
+
+#: ../installer.php:351
+msgid "dir='ltr'"
+msgstr ""
+
+#: ../installer.php:355
+#, php-format
 msgid "Step %d of %d"
 msgstr "Paso %d de %d"
 
-#: ../installer.php:491
-msgid "Step %d of %d"
-msgstr "Paso %d de %d"
+#: ../library.php:271
+msgid "Select language for installation"
+msgstr "Seleccione el idioma para la instalación"
 
-msgid "can't write config file:"
-msgstr "no se puede escribir fichero de configuración"
+#: ../library.php:274
+msgid "Change"
+msgstr "Cambiar"
 
-msgid "Path"
-msgstr "directorio"
+#: ../library.php:293
+msgid "oracle 8 or higher"
+msgstr "oracle 8 o superior"
+
+#: ../library.php:325
+msgid "Error: no database selected"
+msgstr "Error: no hay base de datos seleccionada"
+
+#: ../library.php:335
+msgid "There is a existing configuration file."
+msgstr "Existe un fichero de configuración."
+
+#: ../library.php:336
+msgid "Please remove file to continue installation"
+msgstr "Por favor, borre este fichero para continuar la instalación"
+
+#: ../library.php:357
+msgid "Essential files missing"
+msgstr "No se encuentras ficheros imprescindibles"
+
+#: ../library.php:391
+msgid "Hello"
+msgstr "Hola"
+
+#: ../library.php:392
+msgid "Your new Aiki installation is ready to be used"
+msgstr "Tu nueva instalación de Aiki ya esta lista"
+
+#: ../library.php:393
+msgid "Go to"
+msgstr "Ir a"
+
+#: ../library.php:394
+msgid "Username"
+msgstr "Nombre de usuario"
+
+#: ../library.php:396
+msgid "Have a nice day"
+msgstr "Que tengas un buen día"
+
+#: ../library.php:398
+msgid "Your new Aiki installation"
+msgstr "Tu nueva instalación de Aiki"
+
+#: ../defaults.php:16
+msgid "Aiki Framework Installer"
+msgstr "Instalador Aiki Framework"
+
+#: ../defaults.php:19
+msgid "Aiki Installer"
+msgstr "Instalador Aiki"
+
+#: ../defaults.php:24
+msgid "<strong>Aiki Framework</strong> is an open source high-performance Web Application Framework for rapid web application development using Open Standards."
+msgstr "<strong>Aiki Framework</strong> es un framework de código abierto, de alto rendimiento para desarrollo de aplicaciones web usando estándares abiertos."
+
+#: ../defaults.php:29
+msgid "Requirements"
+msgstr "Requisitos"
+
+#: ../defaults.php:30
+msgid "Before we start you need the following:"
+msgstr "Antes de empezar, necesitas:"
+
+#: ../defaults.php:32
+msgid "An empty database, with collation set to"
+msgstr "Una base de datos vacía con cotejo (collation set) de "
+
+#: ../defaults.php:33
+msgid "PHP 5.2 or above and Apache2"
+msgstr "PHP 5.2 o superior y Apache2"
+
+#: ../defaults.php:34
+msgid "mod_rewrite must be enabled inside apache2 httpd.conf"
+msgstr "mod_rewrite activo "
+
