--- a/assets/apps/installer/languages/en.pot
+++ b/assets/apps/installer/languages/en.pot
@@ -45,12 +45,17 @@ msgid "An empty database, with collation set to"
 msgstr ""
 
 #: defaults.php:33
-msgid "PHP 5.2 or above and Apache2"
+msgid "PHP 5.3 or above and Apache2"
 msgstr ""
 
 #: defaults.php:34
 msgid "mod_rewrite must be enabled inside apache2 httpd.conf"
 msgstr ""
+
+#: defaults.php:38
+msgid "Your server is"
+msgstr ""
+
 
 #: installer.php:122
 msgid "Installation aborted"
