Update Readme with old aikiframework site from archive.org

--- a/README
+++ b/README
@@ -31,14 +31,9 @@ Requirements
 More Information
 ----------------
 
-* http://aikiframework.org
+* old site from Archive.org wayback machine https://web.archive.org/web/20121002041620/http://aikiframework.org/
 
-* Our Code, Bugs and Blueprints Tracked at:
-** http://launchpad.net/aikiframework
-
-* For free hosting of assets (extensions, plugins, etc)
-** http://github.com/aikilab
-** http://aikiframework.org/wiki/Asset_Hosting (more information about)
+** wiki https://web.archive.org/web/20121002041620/http://aikiframework.org/wiki/
 
 
 Copyright (C) 2010 Aikilab
