Fix wiki archived URL

--- a/README
+++ b/README
@@ -33,7 +33,7 @@ More Information
 
 * old site from Archive.org wayback machine https://web.archive.org/web/20121002041620/http://aikiframework.org/
 
-** wiki https://web.archive.org/web/20121002041620/http://aikiframework.org/wiki/
+** wiki https://web.archive.org/web/20121006074925/http://aikiframework.org/wiki/Main_Page
 
 
 Copyright (C) 2010 Aikilab
